--- a/19170_19196_ED_Lab/19170_19196_ED_Lab.csproj
+++ b/19170_19196_ED_Lab/19170_19196_ED_Lab.csproj
@@ -52,7 +52,13 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IStack.cs" />
     <Compile Include="Labirinto.cs" />
+    <Compile Include="ListaSimples.cs" />
+    <Compile Include="Movimento.cs" />
+    <Compile Include="NoLista.cs" />
+    <Compile Include="PilhaLista.cs" />
+    <Compile Include="PilhaVaziaException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
